typescript/checker/tests/conformance/es6/functionPropertyAssignments/FunctionPropertyAssignments6_es6.ts.stderr
error: Unexpected token Some(BinOp(Lt))
 --> $DIR/tests/conformance/es6/functionPropertyAssignments/FunctionPropertyAssignments6_es6.ts:2:12
  |
2 | var v = { *<T>() { } }
  |            ^

